--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body{
 .header-link{
     font-size: 18px;
     color: #e5e7eb;
+    padding: 15px;
 }
 
 .navbar{
@@ -38,4 +39,54 @@ ul{
     justify-content: center;
     align-items: center;
     width: 50%;
+}
+
+
+.sub-header{
+    display: flex;
+    flex-direction: row;
+}
+
+h1{
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
+
+.image-header{
+    width: 550px;
+}
+
+.header-left{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+    width: 50%;
+    margin: 50px;
+}
+
+.header-right{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 50px;
+}
+
+.first-p{
+    font-size: 18px;
+    color: #e5e7eb;
+    margin-left: 150px;
+    padding: 15px;
+}
+
+.header-button{
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: none;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 7px;
 }
