--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,13 @@ body{
     color: #f9faf8;
 }
 
+a{
+    text-decoration: none;
+    color: #e5e7eb;
+}
+
 .header-link{
     font-size: 18px;
-    color: #e5e7eb;
     padding: 15px;
 }
 
@@ -77,7 +81,7 @@ h1{
 .first-p{
     font-size: 18px;
     color: #e5e7eb;
-    margin-left: 150px;
+    margin-left: 145px;
     padding: 15px;
 }
 
@@ -119,4 +123,86 @@ h2{
 .second-p{
     text-align: center;
     font-size: 18px;
+}
+
+.text-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #e5e7eb;
+    height: 500px;
+}
+
+h3{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+    text-align: center;
+}
+
+.third-p{
+    font-size: 18px;
+    text-align: right;
+    padding: 35px;
+}
+
+.bottom{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+
+.blue-container{
+    display: flex;
+    flex-direction: row;
+    background-color: #3882f6;
+    width: 75%;
+    height: 50%;
+    border-radius: 10px;
+    margin: 0 200px 0 100px;
+}
+
+.bottom-left{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 150px;
+    width: 80%;
+}
+
+h4{
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+.fourth-p{
+    color: #f9faf8;
+    font-size: 18px;
+}
+
+.bottom-right{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.bottom-button{
+    background-color: #3882f6;
+    color: #f9faf8;
+    border: 2px solid #f9faf8;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 7px;
+}
+
+.footer{
+    background-color: #1f2937;
+    height: 75px;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
